--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -17,14 +17,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing libraries that will be used.\n",
+    "# Importing some libraries that will be used.\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import "
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello Capstone Project Course!')"
    ]
   }
  ],
