--- a/Week Lab. Segmenting and Clustering.ipynb
+++ b/Week Lab. Segmenting and Clustering.ipynb
@@ -1162,7 +1162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Know we will filter just the Toronto boroughs and neighbourhoods from canada_df."
+    "Now we will filter just the Toronto boroughs and neighbourhoods from canada_df."
    ]
   },
   {
