--- a/Week Lab. Segmenting and Clustering.ipynb
+++ b/Week Lab. Segmenting and Clustering.ipynb
@@ -1274,14 +1274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setting up Foursquare API\n",
     "LIMIT = 100\n",
-    "CLIENT_ID = '4LPKUYABGERSUZPXNIJERW1TIXMTL1SIG3HKAXJJWR4A0FHR'\n",
-    "CLIENT_SECRET = 'VKEMUOAD1GZM2HUSD0NETPYYX1JQ4WB4OCFE33FVMJL2GG1W'\n",
+    "CLIENT_ID = '' #ID\n",
+    "CLIENT_SECRET = '' #Secret\n",
     "VERSION = '20200101'"
    ]
   },
